--- a/Plast/ass7/plastihavet.html
+++ b/Plast/ass7/plastihavet.html
@@ -71,7 +71,7 @@
       </div>
       <div data-aos="fade-up">
         
-        <iframe src="../ass7/spill/index.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
+        <iframe src="../ass7/spill/indx.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
 
       </div>
       <div data-aos="fade-up">
