--- a/Plast/ass7/plastihavet.html
+++ b/Plast/ass7/plastihavet.html
@@ -10,21 +10,23 @@
   <body>
     <div class="square"></div>
     <header>
-    <nav>
-       <a><img alt="headerlogo" id="headerlogo" src="pictures/wave.png"></a>
-
-       <a href="../ass7/plastihavet.html"><img alt="plastsvart1" id="plastsvart1" src="pictures/plastsvart1.png"></a>
-
-       <ul class="menu-home">
-              <li><a href="#down">Hva er mikroplast?</a>
-              <div id="down"></div>
-              </li>
-              <li><a href="besokoss.php">Hvor farlig er mikroplast</a></li>
-              <li><a href="kontaktoss.php">Hvordan mikroplast påvirker mennesket</a></li>
-              <li><a href="musikk.php">Quiz</a></li>
-              <li><a href="https://www.redbubble.com/shop/ap/110454070" target="_blank">Spill</a></li>
-            </ul>
-     </nav>
+      <nav>
+        <a><img alt="headerlogo" id="headerlogo" src="pictures/wave.png"></a>
+ 
+        <a href="../ass7/plastihavet.html"><img alt="plastsvart1" id="plastsvart1" src="pictures/plastsvart1.png"></a>
+ 
+        <ul class="menu-home">
+               <li><a href="#down">Hva er mikroplast?</a>
+                 <div id="down"></div>
+               </li>
+               <li><a href="besokoss.php">Hvor farlig er mikroplast</a></li>
+               <li><a href="kontaktoss.php">Hvordan mikroplast påvirker mennesket</a></li>
+               <li><a href="musikk.php">Quiz</a></li>
+               <li><a href="#downg">Spill</a>
+                 <div id="downg"></div>
+               </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -70,7 +72,10 @@
         <img >
       </div>
       <div data-aos="fade-up">
-        <iframe src="../ass7/spill/index.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
+        <p class="text4">
+        Spill
+        </p>
+          <iframe src="../ass7/spill/index.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
       </div>
       <div data-aos="fade-up">
       <img >
@@ -111,3 +116,4 @@
   </body>
 
 </html>
+
