--- a/Plast/ass7/plastihavet.html
+++ b/Plast/ass7/plastihavet.html
@@ -315,7 +315,7 @@
           <ul class="menu-items">
             <li><a href="plastihavet.html">Hjem</a></li>
             <li><a href="#down">Hva er mikroplast?</a>
-            <li><a href="#down1">Hvilke produkter inneholder mikroplast</a></li>
+            <li><a href="#down1">Hvilke produkter inneholder mikroplast?</a></li>
             <li><a href="#down2">Hvordan påvirker mikroplast marine miljø og mennesker?</a></li>
             <li><a href="#down3">Quiz</a></li>
             <li><a href="#down4">Spill</a></li>
