--- a/plastihavet/plastihavet.html
+++ b/plastihavet/plastihavet.html
@@ -252,7 +252,7 @@
         <p class="textb">
         I dette spillet spiller du som en klovnefisk som må unngå innkommende mikroplastpartikler. Du har 3 liv. Lykke til!
         </p>
-          <iframe src="../ass7/spill/index.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
+          <iframe src="../plastihavet/spill/index.html" width="600" height="500" scrolling="no" noresize="noresize" /></iframe>
       </div>
 
       </div>
