--- a/plastihavet/plastihavet.html
+++ b/plastihavet/plastihavet.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a><img alt="headerlogo" id="headerlogo" src="pictures/wave.png"></a>
-        <a href="..plastihavet/plastihavet.html"><img alt="plastsvart1" id="plastsvart1" src="pictures/plastsvart1.png"></a>
+        <a href="plastihavet.html"><img alt="plastsvart1" id="plastsvart1" src="pictures/plastsvart1.png"></a>
         <ul class="menu-home">
           <li><a href="#down">Hva er mikroplast?</a>
             <div id="down"></div>
