--- a/plastihavet/plastihavet.html
+++ b/plastihavet/plastihavet.html
@@ -44,8 +44,8 @@
         AOS.init();
       </script>
       <div class="container">
-        <h1 data-aos="zoom-in" data-aos-anchor-placement="bottom">PLAST I HAVET</h1>
-        <h2 data-aos="zoom-in" data-aos-anchor-placement="bottom">konsekvenser for klimaet</h2>
+        <h1 data-aos="zoom-in">PLAST I HAVET</h1>
+        <h2 data-aos="zoom-in">konsekvenser for klimaet</h2>
       </div>
       <a href="scroll:;" class="scroll-down arrows">
       <span></span>
