--- a/plastihavet/plastihavet.html
+++ b/plastihavet/plastihavet.html
@@ -2,7 +2,7 @@
 <html lang="no">
   <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link id="stylesheet" rel="stylesheet" href="css/desktop.css">
     <link id="stylesheetm" rel="stylesheet" href="css/mobile.css">
     <link id="stylesheet" rel="stylesheet" href="css/quiz.css">
